Correct spacing on user show page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,6 +15,7 @@
   }
     .about_me {
       @include span-columns(5, "block-collapse");
+      margin-left: 10px;
     }
 
   .user-images{
